--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">CocktailApp</string>
-    <string name="action_settings">Settings</string>
+
+    <string name="action_search">Search</string>
+
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
@@ -9,4 +11,11 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+
+    <string name="title_activity_main_tabs">MainActivityTabs</string>
+
+    <string name="tab_popular">Popular</string>
+    <string name="tab_new">New</string>
+    <string name="tab_random">Random</string>
+    <string name="tab_saved">Saved</string>
 </resources>
