--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="title_activity_search_cocktail">Search for Cocktails</string>
 
     <string name="search_box_hint">Search for cocktails by name...</string>
-    <string name="search_button_text">Do Search</string>
+    <string name="search_button_text">Search</string>
     <string name="action_search">Search</string>
 
     <!-- Strings used for tabs -->
